# tripos_pdf

./: .gitignore  README.md  pyproject.toml  tripos_pdf.py
.github/workflows/: main.yml
tests/: tripos_pdf_test.py
