[project]
name = "tripos_pdf"
version = "1.0.0"
description = "Tool for downloading and combining CUED Tripos papers"
dependencies = [
    "pypdf",
    "reportlab",
    "requests",
]

[project.scripts]
tripos-pdf = "tripos_pdf:main"

[build-system]
requires = ["setuptools>=45"]
build-backend = 'setuptools.build_meta'

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
